k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-frontend
  namespace: afripoint
  labels:
    app: nextjs-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextjs-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: nextjs-frontend
    spec:
      containers:
      - name: frontend
        image: otobongedoho18361/k8s-vm-app-frontend:latest 
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 5
