k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-backend
  namespace: k8s-vm-app
spec:
  selector:
    app: django-backend
  type: NodePort
  ports:
  - port: 8002
    targetPort: 8002
    nodePort: 30000
