k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-frontend
  namespace: k8s-vm-app
spec:
  selector:
    app: nextjs-frontend
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
