k8s/networkpolicy.yml
# PostgreSQL Network Policy - Only allow traffic and Connections from Django Backend
apiVersion: networking.k8s.io/v1
Kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: k8s-vm-app
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: django-backend
    ports:
    - protocol: TCP
      port: 5432

# Django Backend Network Policy - Only allow traffic Connections from Ingress Controller and Frontend
---
apiVersion: networking.k8s.io/v1
Kind: NetworkPolicy
metadata:
  name: django-backend-network-policy
  namespace: k8s-vm-app
spec:
  podSelector:
    matchLabels:
      app: django-backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    - podSelector:
        matchLabels:
          app: nextjs-frontend
    ports:
    - protocol: TCP
      port: 8000

---
# FRONTEND - only accept from ingress controller
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  namespace: k8s-vm-app
spec:
  podSelector:
    matchLabels:
      app: nextjs-frontend
  policyTypes:
  - Ingress
  ingress: 
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 3000
